<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tsmasa1">Start Year Must Be Smaller</string>
    <string name="tsmasa2">Invalid date</string>
    <string name="tsmasa3">Start Month Must Be Smaller Than The Next Month</string>
    <string name="tsmasa4">Start Date Must Be Smaller Than The Next Date</string>
    <string name="tsml1">Past Year Must Be Smaller</string>
    <string name="tsml2">Past Mont Must Be Smaller</string>
    <string name="tsml3">Past Date Must Be Smaller</string>
    <string name="app_name">Counterday</string>
    <string name="dulu">To The past</string>
    <string name="besok">To The Future</string>
    <string name="sembarang">Interval</string>
    <string name="interval">Duration</string>
    <string name="simpan">Saved Date</string>
    <string name="tentang">about</string>
    <string name="hitung">Calculate</string>
    <string name="sekarang">Now</string>
    <string name="hari">Day</string>
    <string name="minggu">Week</string>
    <string name="bulan">Month</string>
    <string name="tahun">Year</string>
    <string name="tanggl">Date</string>
    <string name="mulai">Start</string>
    <string name="selesai">End</string>
    <string name="keluar">Exit</string>
    <string name="senin">Monday</string>
    <string name="selasa">Tuesday</string>
    <string name="rabu">Wednesday</string>
    <string name="kamis">Thursday</string>
    <string name="jumat">Friday</string>
    <string name="sabtu">Saturday</string>
    <string name="mingguhr">Sunday</string>
    <string name="maju">Forward</string>
    <string name="mundur">Backward</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="mei">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="agu">August</string>
    <string name="sep">September</string>
    <string name="okt">October</string>
    <string name="nov">November</string>
    <string name="des">December</string>
    <string name="isi">Fill in The Empty Blank</string>
    <string name="batas">Sorry, Out Of Range</string>
    <string name="ubah">Edit</string>
    <string name="judul">Title</string>
    <string name="sim">Save</string>
    <string name="hapus">Delete</string>
    <string name="toas1">(Date/ Month / Year) Invalid</string>
    <string name="toas3">Date Or Month Is Too Big</string>
    <string name="toas2">February In That Time Only 28 Day</string>
    <string name="toas4">Next Year Must Be Greater</string>
    <string name="toas5">Month Or Date Invalid</string>
    <string name="toas6">Next Mont Must Be Greater</string>
    <string name="toas7">Next Date Must Be Greater</string>
    <string name="isikosong">Fill in The Empty Blank</string>
    <string name="tersimpan">Saved Sucsesfully</string>
    <string name="dihapus">Deleted</string>
    <string name="lewat">Time Has Passed</string>
</resources>