<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D8107">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#1D8107"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/tombol"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_alarm_24"
        android:contentDescription="@string/app_name" />

    <TextView
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:background="#ffffff" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="45dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/duluk"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:background="@drawable/tumbul"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_history_24"
            android:contentDescription="@string/app_name" />
        <TextView
            android:textSize="12sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dulu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bsok"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/tumbul"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_update_24"
            android:contentDescription="@string/app_name" />

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/besok"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/umum"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:background="@drawable/tumbul"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_add_alarm_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sembarang" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interv"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:background="@drawable/tumbul"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_av_timer_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/interval" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/simpan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/tombol"
        android:textAllCaps="false"
        android:text="@string/simpan"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/keluar"
        android:textColor="#F3046C"
        android:background="@drawable/tombol" />

</LinearLayout>
    </FrameLayout>


</ScrollView>